--- a/views/case_details/_case-alert-banner-partial.njk
+++ b/views/case_details/_case-alert-banner-partial.njk
@@ -11,7 +11,7 @@
       text: client.providerClosedBanner
     }) }}
 {% elif currentStatus == "closed" %}
-  {% set outcomeDescription = t('common.outcomeCode.' + client.outcome_code) if client.outcome_code else '' %}
+  {% set outcomeDescription = t('common.outcomeCode.' + client.state_note.code) if client.state_note.code else '' %}
   {{ mojAlert({
       variant: "information",
       title: "Case closed",
@@ -25,6 +25,6 @@
       title: "Case pending",
       showTitleAsHeading: true,
       dismissible: false,
-      html: client.state_note + "<p>" + client.providerViewedBanner + "</p>"
+      html: client.state_note.notes + "<p>" + client.providerViewedBanner + "</p>"
     }) }}
 {% endif %}
