If applied, this aligns h2 headers across the service

--- a/views/case_details/_client-details-partial.njk
+++ b/views/case_details/_client-details-partial.njk
@@ -93,6 +93,8 @@
   passphraseContent: passphraseContent
 } %}
 
+<h2 class="govuk-heading-m">{{ t('pages.caseDetails.tabs.clientDetails') }}</h2>
+
 {# Client info summary card #}
 {{ summaryCardComponent({
   data: constructedData,
