--- a/views/case_details/change-client-address.njk
+++ b/views/case_details/change-client-address.njk
@@ -29,7 +29,7 @@
         <input type="hidden" name="existingAddress" value="{{ existingAddress }}">
         <input type="hidden" name="existingPostcode" value="{{ existingPostcode }}">
 
-        <h1 class="govuk-heading-l">{{ t('forms.clientDetails.address.title') }}</h1>
+        <h2 class="govuk-heading-m">{{ t('forms.clientDetails.address.title') }}</h2>
 
         {{ govukTextarea({
           label: {
