--- a/views/case_details/edit-client-email-address.njk
+++ b/views/case_details/edit-client-email-address.njk
@@ -19,8 +19,8 @@
         {{ govukInput({
           label: {
             text: t('forms.clientDetails.email.title'),
-            classes: "govuk-label--l",
-            isPageHeading: true
+            classes: "govuk-label--m",
+            isPageHeading: false
           },
           id: "emailAddress",
           name: "emailAddress",
