--- a/views/case_details/edit-client-name.njk
+++ b/views/case_details/edit-client-name.njk
@@ -19,8 +19,8 @@
         {{ govukInput({
           label: {
             text: t('forms.clientDetails.name.title'),
-            classes: "govuk-label--l",
-            isPageHeading: true
+            classes: "govuk-label--m",
+            isPageHeading: false
           },
           id: "fullName",
           name: "fullName",
