--- a/views/case_details/edit-client-phone-number.njk
+++ b/views/case_details/edit-client-phone-number.njk
@@ -25,8 +25,8 @@
         {{ govukInput({
           label: {
             text: t('forms.clientDetails.phoneNumber.title'),
-            classes: "govuk-label--l",
-            isPageHeading: true
+            classes: "govuk-label--m",
+            isPageHeading: false
           },
           errorMessage: phoneNumberErrorMessage,
           id: "phoneNumber",
