--- a/views/case_details/edit-date-of-birth.njk
+++ b/views/case_details/edit-date-of-birth.njk
@@ -35,8 +35,8 @@
           fieldset: {
             legend: {
               text: t('forms.clientDetails.dateOfBirth.legend'),
-              isPageHeading: true,
-              classes: "govuk-fieldset__legend--l govuk-!-margin-bottom-6"
+              isPageHeading: false,
+              classes: "govuk-fieldset__legend--m"
             }
           },
           hint: {
