--- a/views/case_details/give-operator-feedback.njk
+++ b/views/case_details/give-operator-feedback.njk
@@ -33,7 +33,7 @@
           legend: {
             text: t('pages.caseDetails.operatorFeedback.legend'),
             classes: "govuk-fieldset__legend--m",
-            isPageHeading: true
+            isPageHeading: false
           }
         }) %}
 
