--- a/views/case_details/third_party_details/add-client-third-party.njk
+++ b/views/case_details/third_party_details/add-client-third-party.njk
@@ -1,5 +1,5 @@
 {# Set template-specific variables #}
-{% set pageTitleKey = 'forms.clientDetails.thirdParty.addPage;pageTitleAdd' %}
+{% set pageTitleKey = 'forms.clientDetails.thirdParty.addPage.pageTitleAdd' %}
 {% set headingKey = 'forms.clientDetails.thirdParty.addPage.pageH1Add' %}
 {% set formActionUrl = "/cases/" + caseReference + "/client-details/add/third-party" %}
 
