--- a/views/case_details/why-pending.njk
+++ b/views/case_details/why-pending.njk
@@ -4,7 +4,7 @@
 {% from "govuk/components/button/macro.njk" import govukButton %}
 {% from "components/errorSummaryComponent.njk" import errorSummary %}
 
-{% block pageTitle %}{{ t('pages.caseDetails.pendingCase.title') }} - {{ serviceName }} - GOV.UK{% endblock %}
+{% block pageTitle %}{{ t('pages.caseDetails.pendingCase.title') }} - {{ config.SERVICE_NAME }} - GOV.UK{% endblock %}
 
 {% block formContent %}
   <div class="govuk-grid-row">
@@ -41,8 +41,8 @@
           fieldset: {
             legend: {
               text: t('pages.caseDetails.pendingCase.legend'),
-              isPageHeading: true,
-              classes: "govuk-fieldset__legend--l"
+              isPageHeading: false,
+              classes: "govuk-fieldset__legend--m"
             }
           },
           errorMessage: errorMessages.pendingReason if error,
