--- a/views/case_details/why-reopen-completed-case.njk
+++ b/views/case_details/why-reopen-completed-case.njk
@@ -3,7 +3,7 @@
 {% from "govuk/components/button/macro.njk" import govukButton %}
 {% from "components/errorSummaryComponent.njk" import errorSummary %}
 
-{% block pageTitle %}{{ t('pages.caseDetails.reopenCase.title') }} - {{ serviceName }} - GOV.UK{% endblock %}
+{% block pageTitle %}{{ t('pages.caseDetails.reopenCase.title') }} - {{ config.SERVICE_NAME }} - GOV.UK{% endblock %}
 
 {% block formContent %}
   <div class="govuk-grid-row">
@@ -21,8 +21,8 @@
         {{ govukCharacterCount({
           label: {
             text: t('pages.caseDetails.reopenCase.label'),
-            classes: 'govuk-label--l',
-            isPageHeading: true
+            classes: 'govuk-label--m',
+            isPageHeading: false
           },
           id: "reopenNote",
           name: "reopenNote",
