feat: move error summaries to the top of the page

--- a/views/base.njk
+++ b/views/base.njk
@@ -114,6 +114,7 @@
 {% block content %}
   <div class="govuk-width-container">
     <div class="govuk-body">
+      {% block errorSummary %}{% endblock %}
       {% block pageContent %}{% endblock %}
     </div>
   </div>
