--- a/views/case_details/_base-case-change.njk
+++ b/views/case_details/_base-case-change.njk
@@ -15,7 +15,9 @@
 {% endblock %}
 
 {% block pageContent %}
-  {{ caseDetailsHeaderComponent(client, hideStatusButton = true) }}
+  {% if not error and not errorState.hasErrors %}
+    {{ caseDetailsHeaderComponent(client, hideStatusButton = true) }}
+  {% endif %}
   
   {% block formContent %}
     {# Child templates override this block with their specific form content #}
