--- a/views/case_details/give-operator-feedback.njk
+++ b/views/case_details/give-operator-feedback.njk
@@ -3,7 +3,7 @@
 {% from "govuk/components/select/macro.njk" import govukSelect %}
 {% from "govuk/components/character-count/macro.njk" import govukCharacterCount %}
 {% from "govuk/components/button/macro.njk" import govukButton %}
-{% from "govuk/components/error-summary/macro.njk" import govukErrorSummary %}
+{% from "components/errorSummaryComponent.njk" import errorSummary %}
 
 {% block pageTitle %}
   {% if errorState.hasErrors %}{{ t('common.error') }}: {% endif %}{{ t('pages.caseDetails.operatorFeedback.pageTitle', { caseReference: caseReference, serviceName: config.SERVICE_NAME }) }}
@@ -13,16 +13,15 @@
   {# No back link for this page #}
 {% endblock %}
 
+{% block errorSummary %}
+  {% if errorState.hasErrors %}
+    {{ errorSummary(errorState.errors, t('common.errorSummaryTitle')) }}
+  {% endif %}
+{% endblock %}
+
 {% block formContent %}
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-
-      {% if errorState.hasErrors %}
-        {{ govukErrorSummary({
-          titleText: t('common.errorSummaryTitle'),
-          errorList: errorState.errors
-        }) }}
-      {% endif %}
 
       <form method="POST" action="/cases/{{ caseReference }}/give-operator-feedback">
 
