--- a/views/case_details/index.njk
+++ b/views/case_details/index.njk
@@ -3,6 +3,7 @@
 {% from "govuk/components/button/macro.njk" import govukButton %}
 {% from "components/tabComponent.njk" import tabComponent %}
 {% from "components/caseDetailsHeaderComponent.njk" import caseDetailsHeaderComponent %}
+{% from "components/errorSummaryComponent.njk" import errorSummary %}
 
 {% block backLink %}
   {{ govukBackLink({
@@ -23,8 +24,17 @@
   {{ t(tabMap[activeTab]) }} - {{ config.SERVICE_NAME }} – GOV.UK
 {% endblock %}
 
+{% block errorSummary %}
+  {% if error %}
+    {{ errorSummary(error.errorSummaryList) }}
+  {% endif %}
+{% endblock %}
+
 {% block pageContent %}
-  {{ caseDetailsHeaderComponent(client) }}
+  {% if not error %}
+    {{ caseDetailsHeaderComponent(client) }}
+  {% endif %}
+  
   {{ tabComponent({
     activeTab: activeTab,
     containerId: "cases-tab-container",
