--- a/views/case_details/why-closed.njk
+++ b/views/case_details/why-closed.njk
@@ -6,11 +6,16 @@
 
 {% block pageTitle %}{{ t('pages.caseDetails.closedCase.title') }} - {{ config.SERVICE_NAME }} - GOV.UK{% endblock %}
 
+{% block errorSummary %}
+  {% if error %}
+    {{ errorSummary(error.errorSummaryList) }}
+  {% endif %}
+{% endblock %}
+
 {% block formContent %}
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       {% if error %}
-        {{ errorSummary(error.errorSummaryList) }}
         {% set errorMessages = {
           eventCode: {text: error.inputErrors.eventCode } if error.inputErrors.eventCode,
           closeNote: {text: error.inputErrors.closeNote } if error.inputErrors.closeNote
