--- a/views/case_details/_case-details-partial.njk
+++ b/views/case_details/_case-details-partial.njk
@@ -1,73 +1,100 @@
 {% from "govuk/components/character-count/macro.njk" import govukCharacterCount %}
 {% from "govuk/components/button/macro.njk" import govukButton %}
 {% from "components/errorSummaryComponent.njk" import errorSummary %}
+{% from "govuk/components/table/macro.njk" import govukTable %}
 
 <span class="case-details-tab-heading-alignment govuk-!-margin-bottom-4">
   <h2 class="govuk-heading-m">{{ t('pages.caseDetails.tabs.caseDetails') }}</h2>
   <a class="govuk-body govuk-link" href="#providerNote">{{ t('pages.caseDetails.caseDetailsSection.noteLabel') }}</a>
 </span>
 {% if error %}
-        {% set errorMessages = {
-          providerNote: {
-            text: error.inputErrors.providerNote
-          }
-          if error.inputErrors.providerNote
-        } %}
-      {% endif %}
+  {{ errorSummary(error.errorSummaryList) }}
+  {% set errorMessages = {
+    providerNote: {
+      text: error.inputErrors.providerNote
+    }
+    if error.inputErrors.providerNote
+  } %}
+{% endif %}
 {# Client problem section #}
 {% if data.scopeTraversal or data.client_notes %}
   <h3 class="govuk-heading-s">{{ t('pages.caseDetails.caseDetailsSection.clientProblemTitle') }}</h3>
 
-  {% if data.scopeTraversal %}
-    <p class="govuk-hint">{{ data.scopeTraversal.created }}</p>
-  {% endif %}
+  {% if data.scopeTraversal and data.scopeTraversal.category %}
 
-  <ul class="govuk-list govuk-list--bullet">
-    {% if data.scopeTraversal and data.scopeTraversal.category %}
-      <li>{{ t('pages.caseDetails.caseDetailsSection.category') }} {{ data.scopeTraversal.category }}</li>
-    {% endif %}
+    {% set rows = [] %}
+    {% set label = t('pages.caseDetails.caseDetailsSection.category') | replace(":", "") | capitalize %}
 
-    {% if data.scopeTraversal and data.scopeTraversal.subCategory %}
-      <li>{{ t('pages.caseDetails.caseDetailsSection.subCategory') }} {{ data.scopeTraversal.subCategory }}</li>
-    {% endif %}
+    {# Category value #}
 
-    {% if data.scopeTraversal and data.scopeTraversal.onwardQuestion %}
-      {% for qa in data.scopeTraversal.onwardQuestion %}
-        <li>{{ qa.question }} {{ qa.answer }}</li>
+    {% set category = data.scopeTraversal.category %}
+
+    {% set rows = rows.concat([
+      [
+        {
+          text: label
+        }, {
+          text: category | string
+        }
+      ]
+    ]) %}
+
+    {# Onward Q&A rows #}
+
+    {% set qas = data.scopeTraversal.onwardQuestion %}
+
+    {% if qas %}
+      {% for qa in qas %}
+        {% set rows = rows.concat([
+          [
+            {
+              text: qa.question | string
+            }, {
+              text: qa.answer | string
+            }
+          ]
+        ]) %}
       {% endfor %}
     {% endif %}
 
-    {% if data.client_notes %}
-      <li>{{ t('pages.caseDetails.caseDetailsSection.tellUsMore') }} {{ data.client_notes }}</li>
-    {% endif %}
+    {{ govukTable({
+    captionClasses: "govuk-table__caption--m",
+    firstCellIsHeader: true,
+    rows: rows
+  }) }}
 
-    {% if data.scopeTraversal and data.scopeTraversal.financialAssessmentStatus %}
-      <li>{{ t('pages.caseDetails.caseDetailsSection.financialAssessmentStatus') }} {{ data.scopeTraversal.financialAssessmentStatus }}</li>
-    {% endif %}
-  </ul>
+  {% endif %}
 
-  <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible govuk-!-margin-bottom-6"/>
+  {% if data.scopeTraversal %}
+    <p class="govuk-hint govuk-!-margin-bottom-8">{{ data.scopeTraversal.created }}</p>
+  {% endif %}
+
 {% endif %}
 
 {# Operator diagnosis section #}
 {% if data.diagnosis %}
   <h3 class="govuk-heading-s">{{ t('pages.caseDetails.caseDetailsSection.operatorDiagnosisTitle') }}</h3>
+  {% set rows = [] %}
 
-  <ul class="govuk-list govuk-list--bullet">
-    {% if data.diagnosis.category %}
-      <li>{{ t('pages.caseDetails.caseDetailsSection.category') }} {{ data.diagnosis.category }}</li>
-    {% endif %}
+  {% if data.diagnosis.diagnosisNode %}
+    {% for node in data.diagnosis.diagnosisNode %}
+      {% set rows = rows.concat([
+        [
+          {
+            text: node.node
+          }
+        ]
+      ]) %}
+    {% endfor %}
+  {% endif %}
 
-    {% if data.diagnosis.diagnosisNode %}
-      {% for node in data.diagnosis.diagnosisNode %}
-        <li>{{ node.node }} </li>
-      {% endfor %}
-    {% endif %}
-  </ul>
+  {{ govukTable({
+    captionClasses: "govuk-table__caption--s",
+    firstCellIsHeader: false,
+    rows: rows
+  }) }}
 
-  <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible govuk-!-margin-bottom-6"/>
 {% endif %}
-
 
 {# Operator notes section #}
 {% if data.operatorNotes %}
@@ -76,20 +103,19 @@
   <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible govuk-!-margin-bottom-6"/>
 {% endif %}
 
-
 {# Providers notes section #}
 <h3 class="govuk-heading-s">{{ t('pages.caseDetails.caseDetailsSection.providerNotesTitle') }}</h3>
 {% if data.notesHistory and data.notesHistory.length > 0 %}
   {% for note in data.notesHistory %}
     <div class="govuk-!-margin-bottom-4">
-      <p class="govuk-hint">{{ note.createdBy }} on {{ note.created }}</p>
       <p class="govuk-body">{{ note.providerNotes }}</p>
+      <p class="govuk-hint">{{ note.createdBy }} on {{ note.created }}</p>
+      <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible govuk-!-margin-bottom-6"/>
     </div>
   {% endfor %}
 {% else %}
   <p class="govuk-body">{{ t('pages.caseDetails.caseDetailsSection.noNotes') }}</p>
 {% endif %}
-
 
 {% block formContent %}
   <div class="govuk-grid-row">
