If applied, this updates the headings based on updated figma designs

--- a/views/case_details/change-client-address.njk
+++ b/views/case_details/change-client-address.njk
@@ -34,7 +34,7 @@
         {{ govukTextarea({
           label: {
             text: t('forms.clientDetails.address.label'),
-            classes: "govuk-label--m"
+            classes: "govuk-label"
           },
           id: "address",
           name: "address",
@@ -46,7 +46,7 @@
         {{ govukInput({
           label: {
             text: t('forms.clientDetails.address.postcode'),
-            classes: "govuk-label--m"
+            classes: "govuk-label"
           },
           id: "postcode",
           name: "postcode",
