If applied, this accounts for `state_note` being `null`

--- a/views/case_details/_case-alert-banner-partial.njk
+++ b/views/case_details/_case-alert-banner-partial.njk
@@ -25,6 +25,6 @@
       title: "Case pending",
       showTitleAsHeading: true,
       dismissible: false,
-      html: client.state_note.notes + "<p>" + client.providerViewedBanner + "</p>"
+      html: (client.state_note.notes if client.state_note.notes else '')+ "<p>" + client.providerViewedBanner + "</p>"
     }) }}
 {% endif %}
