--- a/views/case_details/client_support_needs/_base-client-support-needs.njk
+++ b/views/case_details/client_support_needs/_base-client-support-needs.njk
@@ -13,7 +13,7 @@
 {% block formContent %}
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-      <h1 class="govuk-heading-l">{{ t(headingKey) }}</h1>
+      <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">{{ t(headingKey) }}</legend>
 
       {# Set up variables for the form partial #}
       {% set formAction = formActionUrl %}
