--- a/views/case_details/edit-client-phone-number.njk
+++ b/views/case_details/edit-client-phone-number.njk
@@ -17,6 +17,8 @@
         {% set phoneNumberErrorMessage = { text: error.inputErrors.phoneNumber } if error.inputErrors.phoneNumber %}
         {% set announceCallErrorMessage = { text: error.inputErrors.announceCall } if error.inputErrors.announceCall %}
       {% endif %}
+
+      <h2 class="govuk-heading-m">{{ t('forms.clientDetails.phoneNumber.title') }}</h2>
       <form method="post" action="/cases/{{ caseReference }}/client-details/change/phone-number">
         <input type="hidden" name="_csrf" value="{{ csrfToken }}">
         <input type="hidden" name="existingSafeToCall" value="{{ existingSafeToCall }}">
@@ -24,9 +26,9 @@
         <input type="hidden" name="existingAnnounceCall" value="{{ existingAnnounceCall }}">
         {{ govukInput({
           label: {
-            text: t('forms.clientDetails.phoneNumber.title'),
-            classes: "govuk-label--l",
-            isPageHeading: true
+            text: t('forms.clientDetails.phoneNumber.phoneNumber'),
+            classes: "govuk-label",
+            isPageHeading: false
           },
           errorMessage: phoneNumberErrorMessage,
           id: "phoneNumber",
@@ -44,7 +46,7 @@
             legend: {
               text: t('forms.clientDetails.phoneNumber.safeToCall'),
               isPageHeading: false,
-              classes: "govuk-fieldset__legend--m"
+              classes: "govuk-fieldset__legend"
             }
           },
           items: [
@@ -66,7 +68,7 @@
             legend: {
               text: t('forms.clientDetails.phoneNumber.announceCall'),
               isPageHeading: false,
-              classes: "govuk-fieldset__legend--m"
+              classes: "govuk-fieldset__legend"
             }
           },
           items: [
