if applied, simplifies logic for creating table rows

--- a/views/case_details/_case-details-partial.njk
+++ b/views/case_details/_case-details-partial.njk
@@ -22,14 +22,13 @@
 
   {% if data.scopeTraversal and data.scopeTraversal.category %}
 
-    {% set rows = [] %}
     {% set label = t('pages.caseDetails.caseDetailsSection.category') | replace(":", "") | capitalize %}
 
     {# Category value #}
 
     {% set category = data.scopeTraversal.category %}
 
-    {% set rows = rows.concat([
+    {% set rows = ([
       [
         {
           text: label
@@ -74,8 +73,7 @@
 {# Operator diagnosis section #}
 {% if data.diagnosis %}
   <h3 class="govuk-heading-s">{{ t('pages.caseDetails.caseDetailsSection.operatorDiagnosisTitle') }}</h3>
-  {% set rows = [] %}
-
+{% set rows = [] %}
   {% if data.diagnosis.diagnosisNode %}
     {% for node in data.diagnosis.diagnosisNode %}
       {% set rows = rows.concat([
