fix: always show client details

--- a/views/case_details/_base-case-change.njk
+++ b/views/case_details/_base-case-change.njk
@@ -15,10 +15,7 @@
 {% endblock %}
 
 {% block pageContent %}
-  {% if not error and not errorState.hasErrors %}
-    {{ caseDetailsHeaderComponent(client, hideStatusButton = true) }}
-  {% endif %}
-  
+  {{ caseDetailsHeaderComponent(client) }}
   {% block formContent %}
     {# Child templates override this block with their specific form content #}
   {% endblock %}
