--- a/views/base.njk
+++ b/views/base.njk
@@ -114,7 +114,7 @@
 {% block content %}
   <div class="govuk-width-container">
     <div class="govuk-body">
-      {% block errorSummary %}{% endblock %}
+      {% block errorSummaryOrAlert %}{% endblock %}
       {% block pageContent %}{% endblock %}
     </div>
   </div>
