--- a/views/case_details/do-you-want-to-give-feedback.njk
+++ b/views/case_details/do-you-want-to-give-feedback.njk
@@ -2,7 +2,7 @@
 {% from "govuk/components/radios/macro.njk" import govukRadios %}
 {% from "govuk/components/button/macro.njk" import govukButton %}
 {% from "components/errorSummaryComponent.njk" import errorSummary %}
-  
+{% from "components/alertBannerComponent.njk" import alertBannerComponent %}
 
 {% block pageTitle %}
   {% if errorState.hasErrors %}{{ t('common.error') }}: {% endif %}{{ t('pages.caseDetails.doYouWantToGiveFeedback.pageTitle', { caseReference: caseReference, serviceName: config.SERVICE_NAME }) }}
@@ -12,9 +12,11 @@
   {# No back link for this page #}
 {% endblock %}
 
-{% block errorSummary %}
+{% block errorSummaryOrAlert %}
   {% if errorState.hasErrors %}
     {{ errorSummary(errorState.errors, t('common.errorSummaryTitle')) }}
+  {% else %}
+    {{ alertBannerComponent(client) }}
   {% endif %}
 {% endblock %}
 
