--- a/views/case_details/index.njk
+++ b/views/case_details/index.njk
@@ -4,6 +4,7 @@
 {% from "components/tabComponent.njk" import tabComponent %}
 {% from "components/caseDetailsHeaderComponent.njk" import caseDetailsHeaderComponent %}
 {% from "components/errorSummaryComponent.njk" import errorSummary %}
+{% from "components/alertBannerComponent.njk" import alertBannerComponent %}
 
 {% block backLink %}
   {{ govukBackLink({
@@ -24,16 +25,16 @@
   {{ t(tabMap[activeTab]) }} - {{ config.SERVICE_NAME }} – GOV.UK
 {% endblock %}
 
-{% block errorSummary %}
+{% block errorSummaryOrAlert %}
   {% if error %}
     {{ errorSummary(error.errorSummaryList) }}
+  {% else %}
+    {{ alertBannerComponent(client) }}
   {% endif %}
 {% endblock %}
 
 {% block pageContent %}
-  {% if not error %}
-    {{ caseDetailsHeaderComponent(client) }}
-  {% endif %}
+  {{ caseDetailsHeaderComponent(client) }}
   
   {{ tabComponent({
     activeTab: activeTab,
