--- a/src/scss/components/_error_or_state_banner.scss
+++ b/src/scss/components/_error_or_state_banner.scss
@@ -1,4 +1,10 @@
 // Error summary banner
-.mcc-error-or-state-banner {
+.mcc-error-banner {
   margin-top: -20px;
+  margin-bottom: -20px;
+}
+
+.mcc-alert-banner {
+  margin-top: -40px;
+  margin-bottom: -20px;
 }
