--- a/views/components/alertBannerComponent.njk
+++ b/views/components/alertBannerComponent.njk
@@ -1,5 +1,7 @@
 {% macro alertBannerComponent(client) %}
-  <div class="mcc-case-details-header mcc-error-or-state-banner">
-    {% include "case_details/_case-alert-banner-partial.njk" %}
+  <div class="govuk-grid-row mcc-alert-banner">
+    <div class="govuk-grid-column-two-thirds">
+      {% include "case_details/_case-alert-banner-partial.njk" %}
+    </div>
   </div>
 {% endmacro %}
