fix: remove unused css class and fix tests

--- a/views/components/caseDetailsHeaderComponent.njk
+++ b/views/components/caseDetailsHeaderComponent.njk
@@ -1,5 +1,5 @@
 {% macro caseDetailsHeaderComponent(client, hideStatusButton = false) %}
-  <div>
+  <div id="mcc-case-details-header">
     {% include "case_details/_case-info-partial.njk" %}
   </div>
 {% endmacro %}
