if applied, creates the split case assignment page

--- a/views/case_details/_case-info-partial.njk
+++ b/views/case_details/_case-info-partial.njk
@@ -139,7 +139,7 @@
 
       {{ govukButton({
         text: t('pages.caseDetails.buttons.splitThisCase'),
-        href: "#",
+        href: "/cases/" + client.caseReference + "/split-this-case",
         classes: "govuk-button--secondary govuk-!-margin-right-3"
       }) }}
 
