if applied, updates link for guidance

--- a/views/case_details/split-this-case.njk
+++ b/views/case_details/split-this-case.njk
@@ -29,7 +29,7 @@
 
         <h2 class="govuk-heading-m">{{ t('pages.caseDetails.splitCase.h2') }}</h2>
 
-        <p class="govuk-body">{{ t('pages.caseDetails.splitCase.infoText') }} <a class="govuk-link">Check 5.20 of page 35 of the guidance (PDF, 599KB)</a>{{ t('pages.caseDetails.splitCase.textEnd') }}</p>
+        <p class="govuk-body">{{ t('pages.caseDetails.splitCase.infoText') }} <a class="govuk-link" href="https://assets.publishing.service.gov.uk/media/679a1a75fe19800263dc7b86/2_2025_Civil_Legal_Advice_Contract_Annex_1_Specification.pdf"> Check 5.20 of page 35 of the guidance (PDF, 599KB)</a>{{ t('pages.caseDetails.splitCase.textEnd') }}</p>
 
         {{ govukRadios({
           name: "splitProvider",
