--- a/views/case_details/split-this-case.njk
+++ b/views/case_details/split-this-case.njk
@@ -22,17 +22,21 @@
         }) }}
       {% endif %}
 
-      <form method="POST" action="/cases/{{ caseReference }}/">
+      <form method="POST" action="/cases/{{ caseReference }}/split-this-case">
 
         <!-- CSRF Protection -->
         <input type="hidden" name="_csrf" value="{{ csrfToken }}"/>
 
         <h2 class="govuk-heading-m">{{ t('pages.caseDetails.splitCase.h2') }}</h2>
 
-        <p class="govuk-body">{{ t('pages.caseDetails.splitCase.infoText') }} <a class="govuk-link" href="https://assets.publishing.service.gov.uk/media/679a1a75fe19800263dc7b86/2_2025_Civil_Legal_Advice_Contract_Annex_1_Specification.pdf"> Check 5.20 of page 35 of the guidance (PDF, 599KB)</a>{{ t('pages.caseDetails.splitCase.textEnd') }}</p>
+        <p class="govuk-body">{{ t('pages.caseDetails.splitCase.infoText') }}
+          <a class="govuk-link" href="https://assets.publishing.service.gov.uk/media/679a1a75fe19800263dc7b86/2_2025_Civil_Legal_Advice_Contract_Annex_1_Specification.pdf#page=35" target="_blank" rel="noopener noreferrer">
+            {{ t('pages.caseDetails.splitCase.linkText') }}</a>
+          {{ t('pages.caseDetails.splitCase.infoTextEnd') }}
+        </p>
 
         {{ govukRadios({
-          name: "splitProvider",
+          name: "internal",
           errorMessage: splitProviderErrorMessage,
           fieldset: {
             legend: {
@@ -44,11 +48,11 @@
           items: [
             {
               value: "true",
-              text: t('common.yes')
+              text: provider.name
             },
             {
               value: "false",
-              text: t('common.no')
+              text: t('pages.caseDetails.splitCase.operatorReassignment')
             }
           ]
         }) }}
