If applied this: - updates MSW for getting provider name - tidies up handlers - adds some test data - update Page Object Model

--- a/views/case_details/split-this-case.njk
+++ b/views/case_details/split-this-case.njk
@@ -37,6 +37,7 @@
 
         {{ govukRadios({
           name: "internal",
+          value: 'true' if (internal == true) else 'false',
           errorMessage: splitProviderErrorMessage,
           fieldset: {
             legend: {
